--- a/i3/config
+++ b/i3/config
@@ -36,7 +36,8 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec i3-dmenu-desktop
+bindsym $mod+d exec rofi -show drun
+bindsym $mod+Shift+d exec rofi -show window
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -211,7 +212,7 @@ smart_gaps on
 
 exec --no-startup-id ~/.screenlayout/screenlayout.sh
 exec --no-startup-id nitrogen --restore
-exec --no-startup-id wal -R -n
+exec --no-startup-id wal -R -n --vte
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec --no-startup-id xkbcomp -w 0 ~/.xkbmap $DISPLAY
 exec --no-startup-id spotify
