--- a/i3/config
+++ b/i3/config
@@ -217,3 +217,4 @@ exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec --no-startup-id xkbcomp -w 0 ~/.xkbmap $DISPLAY
 exec --no-startup-id spotify
 exec --no-startup-id dunst
+exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1 &
