--- a/polybar/config
+++ b/polybar/config
@@ -32,7 +32,7 @@ width = 100%
 height = 27
 ;offset-x = 1%
 ;offset-y = 1%
-fixed-center = false
+fixed-center = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -52,8 +52,8 @@ font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = siji:pixelsize=10;1
 
 modules-left = i3 xwindow
-modules-center =
-modules-right = spotify pulseaudio battery date powermenu
+modules-center = date
+modules-right = spotify pulseaudio battery powermenu
 
 tray-position = right
 tray-padding = 2
@@ -77,8 +77,8 @@ format = <label-state> <label-mode>
 index-sort = true
 wrapping-scroll = false
 
-; Main
-ws-icon-0 = "1;"
+; Browser
+ws-icon-0 = "1;"
 
 ; Browser
 ws-icon-1 = "2;"
@@ -98,7 +98,7 @@ ws-icon-5 = "6;"
 ; ???
 ws-icon-6 = "7;"
 
-; Dotfiles
+; Discord
 ws-icon-7 = "8;"
 
 ; Terminal
@@ -153,15 +153,15 @@ click-left = i3-msg [class="Spotify"] focus
 type = internal/date
 interval = 1
 
-date = " %Y-%m-%d"
-date-alt = " %Y-%m-%d"
+date = " %d/%m/%y"
+date-alt = " %d/%m/%y"
 
 time = %H:%M
 time-alt = %H:%M:%S
 
-format-prefix = 
+;format-prefix = 
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #0a6cf5
+; format-underline = #0a6cf5
 
 label = %date% %time%
 
@@ -268,12 +268,12 @@ menu-0-2-exec = menu-open-3
 menu-1-0 = cancel
 menu-1-0-exec = menu-open-0
 menu-1-1 = reboot
-menu-1-1-exec = sudo reboot
+menu-1-1-exec = reboot
 
 menu-2-0 = cancel
 menu-2-0-exec = menu-open-0
 menu-2-1 = power off
-menu-2-1-exec = sudo poweroff
+menu-2-1-exec = poweroff
 
 menu-3-0 = cancel
 menu-3-0-exec = menu-open-0
