--- a/_old/i3/config
+++ b/_old/i3/config
@@ -24,13 +24,13 @@ font pango: Unifont 14
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec tdrop -w 50% -h 15% -x 5% -m -a -y 30 alacritty
-bindsym $mod+Shift+Return exec alacritty
+bindsym $mod+Return exec alacritty
+bindsym $mod+Shift+Return exec tdrop -w 50% -h 15% -x 5% -m -a -y 30 --name "tdropdown" alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
+# start rofi
 bindsym $mod+d exec rofi -show combi
 
 # alternatively, you can use the cursor keys:
@@ -211,6 +211,9 @@ for_window [window_role="bubble"] floating enable
 for_window [window_role="task_dialog"] floating enable
 for_window [window_role="Preferences"] floating enable
 
+# Help fix tdrop's flickering due to it having to float the window
+for_window [title="tdropdown"] floating enable
+
 for_window [window_type="dialog"] floating enable
 for_window [window_type="menu"] floating enable
 
@@ -226,7 +229,7 @@ gaps inner 10
 gaps outer 0
 
 # Auto-start those programs
-exec $noid picom -b -d :0
+# exec $noid picom -b
 exec $noid nitrogen --restore
 exec $noid wal -R -n --vte
 exec_always $noid $HOME/.config/polybar/launch.sh
@@ -235,6 +238,7 @@ exec $noid dunst
 exec $noid /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1 &
 exec $noid discord
 exec $noid spotify
+exec $noid autotiling
 
 # We need to delay Keepassxc's launch otherwise it won't minimize properly on launch
 exec $noid "sh -c 'sleep 5; exec keepassxc'"
