--- a/sway/config
+++ b/sway/config
@@ -160,9 +160,9 @@ bindsym XF86AudioPause exec playerctl play-pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
-bindsym XF86AudioRaiseVolume exec $noid pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec $noid pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec $noid pactl set-sink-mute 0 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 0 +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym XF86AudioMute exec pactl set-sink-mute 0 toggle # mute sound
 
 focus_follows_mouse no
 
