--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -17,4 +17,4 @@ disabled = true
 [character]
 error_symbol = "✗"
 use_symbol_for_status = true
-style_failure = "bold green"
+style_failure = "#A84055"
