--- a/sway/config
+++ b/sway/config
@@ -17,6 +17,7 @@ include "$HOME/.cache/wal/colors-sway"
 ### Output configuration
     output DVI-D-1 bg $wallpaper fill pos 0 0 res 1920x1080@144hz
     output DP-1 bg $wallpaper fill pos 1920 0 res 1920x1080
+    focus output DVI-D-1
 
 ### Input configuration
     input * {
@@ -27,7 +28,7 @@ include "$HOME/.cache/wal/colors-sway"
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango: Unifont 14
+font pango: Fira Code Nerd Font 10
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -47,6 +48,12 @@ bindsym $mod+Shift+q kill
 
 # start rofi
 bindsym $mod+d exec rofi -show drun
+
+# capture screen
+bindsym $mod+p exec grim -g "$(slurp -d)" -t png - | wl-copy -t image/png
+bindsym $mod+Shift+p exec ~/dotfiles/scripts/screenshot-window.sh
+bindsym Print exec grim - | wl-copy -t image/png
+bindsym Shift+Print exec grim -o $(swaymsg -t get_outputs | jq -r '.[] | select(.focused) | .name') - | wl-copy -t image/png
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -193,9 +200,9 @@ mode "resize" {
 }
 
 # class                 border          backgr.         text            indicator       child_border
-client.focused          $color3         $color3         $foreground     #B2BAFF         $color3
-client.focused_inactive $background     $background     $foreground     $background     $background
-client.unfocused        $background     $background     $foreground     $background     $background
+client.focused          #656B91         #656B91         $foreground     #B2BAFF         #656B91
+client.focused_inactive #131A30         #131A30         $foreground     #131A30         #131A30
+client.unfocused        #131A30         #131A30         $foreground     #131A30         #131A30
 client.urgent           $background     $background     $foreground     $background     $background
 client.placeholder      $background     $background     $foreground     $background     $background
 
@@ -211,8 +218,8 @@ for_window [app_id="pavucontrol"] floating enable
 for_window [app_id="gnome-calculator"] floating enable
 
 # Move some window to specific workspaces
-for_window [class="Discord"] move to workspace $ws9
-for_window [class="Spotify"] move to workspace $ws10
+for_window [class="Discord"] move window to workspace $ws9
+for_window [class="Spotify"] move window to workspace $ws10
 
 assign [class="Firefox"] $ws2
 assign [class="discord"] $ws9
