Update Waybar config, add move workspace to output command to Sway, add Mako config

--- a/sway/config
+++ b/sway/config
@@ -61,7 +61,7 @@ bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
-# move focused windowC
+# move focused window
 bindsym $mod+Shift+j move left
 bindsym $mod+Shift+k move down
 bindsym $mod+Shift+l move up
@@ -72,6 +72,9 @@ bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
+
+# move focused window to another output
+bindsym $mod+Tab move workspace to output right
 
 # split in horizontal orientation
 bindsym $mod+h split h
