--- a/mako/config
+++ b/mako/config
@@ -1,2 +1,17 @@
-default-timeout=3000
+default-timeout=8000
 output=DVI-D-1
+
+font=Fira Code Nerd Font 10
+
+padding=12
+
+background-color=#0c101eed
+progress-color=#FAF6F6
+text-color=#FAF6F6
+
+border-color=#6B79CF
+border-size=4
+border-radius=1
+
+width=385
+margin=10, 8, 5
