--- a/sway/config
+++ b/sway/config
@@ -55,17 +55,22 @@ bindsym $mod+Shift+p exec grimshot --notify copy window
 bindsym Print exec grimshot --notify copy output
 bindsym Shift+Print exec grimshot --notify copy screen
 
-# alternatively, you can use the cursor keys:
+# Movement
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
+bindsym $mod+$left focus left
+bindsym $mod+$down focus down
+bindsym $mod+$up focus up
+bindsym $mod+$right focus right
+
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+bindsym $mod+Shift+$left move left
+bindsym $mod+Shift+$down move down
+bindsym $mod+Shift+$up move up
+bindsym $mod+Shift+$right move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -76,8 +81,8 @@ bindsym $mod+Shift+Right move right
 # move focused window to another output
 bindsym $mod+Tab move workspace to output right
 
-# split in horizontal orientation
-bindsym $mod+h split h
+# split in horizontal
+bindsym $mod+g split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -159,7 +164,7 @@ bindsym $mod+Shift+r reload
 bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -b 'Yes, exit sway' 'swaymsg exit'
 
 # lock session
-bindsym $mod+l exec "swaylock -c 000000 -e"
+bindsym $mod+i exec "swaylock -c 000000 -e"
 
 # Quickly edit dotfiles
 bindsym $mod+k exec "code ~/dotfiles"
