--- a/sway/config
+++ b/sway/config
@@ -12,7 +12,7 @@ include "$HOME/.cache/wal/colors-sway"
         set $right l
 
     # Terminal
-        set $term alacritty
+        set $term kitty
 
 ### Output configuration
     output DVI-D-1 bg $wallpaper fill pos 0 0 res 1920x1080@144hz max_render_time 1
@@ -41,7 +41,7 @@ floating_modifier $mod
 ### Key bindings
 
 # start a terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec $term
 
 # kill focused window
 bindsym $mod+Shift+q kill
