--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      monospace
-# bold_font        auto
-# italic_font      auto
-# bold_italic_font auto
+font_family      Fira Code Regular Nerd Font Complete
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -317,7 +317,7 @@
 
 #: Performance tuning {{{
 
-# repaint_delay 10
+repaint_delay 5
 
 #: Delay (in milliseconds) between screen updates. Decreasing it,
 #: increases frames-per-second (FPS) at the cost of more CPU usage.
@@ -327,7 +327,7 @@
 #: rate. Also, to minimize latency when there is pending input to be
 #: processed, repaint_delay is ignored.
 
-# input_delay 3
+input_delay 1
 
 #: Delay (in milliseconds) before input from the program running in
 #: the terminal is processed. Note that decreasing it will increase
@@ -335,7 +335,7 @@
 #: in full screen programs that redraw the entire screen on each loop,
 #: because kitty is so fast that partial screen updates will be drawn.
 
-# sync_to_monitor yes
+sync_to_monitor no
 
 #: Sync screen updates to the refresh rate of the monitor. This
 #: prevents tearing (https://en.wikipedia.org/wiki/Screen_tearing)
@@ -434,7 +434,7 @@
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-# window_padding_width 0
+window_padding_width 6 8
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -779,7 +779,7 @@
 #: remote control. See the help for kitty --listen-on for more
 #: details.
 
-# env 
+# env
 
 #: Specify environment variables to set in all child processes. Note
 #: that environment variables are expanded recursively, so if you
