--- a/waybar/config
+++ b/waybar/config
@@ -52,7 +52,7 @@
         "interval": 3600,
         "return-type": "json",
         "exec": "~/.config/waybar/modules/updates.sh",
-        "on-click": "alacritty -e fish -c 'yay;pkill -RTMIN+8 waybar;read -n 1 -s -r'",
+        "on-click": "kitty -e fish -c 'yay;pkill -RTMIN+8 waybar;read -n 1 -s -r'",
         "signal": 8
     }
 }
