--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -348,7 +348,7 @@ sync_to_monitor no
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell no
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
@@ -434,7 +434,7 @@ sync_to_monitor no
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 6 8
+window_padding_width 7 8
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
