--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -83,14 +83,14 @@ scrolling:
 # Font configuration (changes require restart)
 font:
   # Normal (roman) font face
-  #normal:
+  normal:
     # Font family
     #
     # Default:
     #   - (macOS) Menlo
     #   - (Linux) monospace
     #   - (Windows) Consolas
-    #family: monospace
+    family: Iosevka Slab Extended
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -118,7 +118,7 @@ font:
     #style: Italic
 
   # Point size
-  size: 11.0
+  size: 12.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
