--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -90,7 +90,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux) monospace
     #   - (Windows) Consolas
-    family: Iosevka Slab Extended
+    family: Iosevka Term Slab
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
