[terminal] Move to foot from alacritty
Foot is slower at some things but its much faster startup wins my heart, features wise it's about the same as alacritty so I don't really mind

--- a/sway/config
+++ b/sway/config
@@ -12,7 +12,7 @@ include "$HOME/.cache/wal/colors-sway"
         set $right l
 
     # Terminal
-        set $term alacritty
+        set $term footclient
 
     # Workspaces
         set $ws1 "1:home"
