[sway] Update config

--- a/sway/config
+++ b/sway/config
@@ -56,3 +56,5 @@ include ./autostart
 
 # Sway's configs
 include /etc/sway/config.d/*
+
+exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
