[pacman] Update makepkg flags

--- a/pacman/makepkg.conf
+++ b/pacman/makepkg.conf
@@ -1,1 +1,4 @@
 MAKEFLAGS="-j$(nproc)"
+CFLAGS="-march=native -O2 -pipe -fno-plt"
+CXXFLAGS="${CFLAGS}"
+RUSTFLAGS="-C opt-level=2 -C target-cpu=native"
