--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ shared/fish/local.fish
 shared/fish/functions/fisher.fish
 shared/fish/completions/fisher.fish
 shared/fish/fisher/
+shared/fish/completions/bun.fish
