feat(zed): Add settings for Windows

--- a/shared/zed/settings.json
+++ b/shared/zed/settings.json
@@ -22,6 +22,10 @@
 	"gutter": {
 		"min_line_number_digits": 3
 	},
+	"windows": {
+		"ui_font_size": 18,
+		"buffer_font_size": 16
+	},
 	"icon_theme": "Colored Zed Icons Theme Light",
 	"experimental.theme_overrides": {
 		"background": "#1e1e1e",
