feat: new linux setup

--- a/linux/foot/foot.ini
+++ b/linux/foot/foot.ini
@@ -4,7 +4,7 @@
 # term=foot (or xterm-256color if built with -Dterminfo=disabled)
 # login-shell=no
 
-font=Iosevka Term Slab:size=13
+font=Iosevka Term Slab:size=14
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -45,6 +45,9 @@ pad=15x12                             # optionally append 'center'
 [mouse]
 # hide-when-typing=no
 # alternate-scroll-mode=yes
+
+[main]
+include=/home/erika/dotfiles/linux/foot/dank-colors.ini
 
 [colors]
 # alpha=1.0
